# hachilles

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  NOTICE  README.md  SECURITY.md  STANDARDS.md  api_cli_spec.md  core_engine_spec.md  feature_list.json  gc_agent.py  pyproject.toml  web_frontend_spec.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  hachilles-quality.yml  publish.yml
blog/: harness-100-benchmark.md  revfactory-collaboration-proposal.md
docs/: architecture.md  branch-protection.md  conventions.md  forbidden.md  harness-integration.md  whitepaper.md
docs/decisions/: 001-layer-architecture.md  002-scanner-design.md  003-auditor-interface.md  004-score-engine.md
src/hachilles/: __init__.py  __main__.py  cli.py
src/hachilles/api/: __init__.py  app.py  models.py
src/hachilles/api/routes/: __init__.py  agents.py  compare.py  history.py  scan.py
src/hachilles/auditors/: __init__.py  base.py  constraint_auditor.py  context_auditor.py  entropy_auditor.py
src/hachilles/llm/: __init__.py  cache.py  client.py  evaluator.py
src/hachilles/models/: __init__.py  scan_result.py
src/hachilles/plugins/: __init__.py  base.py  registry.py
src/hachilles/prescriptions/: __init__.py
src/hachilles/report/: __init__.py
src/hachilles/report/templates/: report.html.j2
src/hachilles/scanner/: __init__.py  ast_analyzer.py  scanner.py
src/hachilles/score/: __init__.py  score_engine.py
src/hachilles/tracker/: __init__.py  history.py
src/hachilles/web/: index.html  package-lock.json  package.json  vite.config.ts  vite.config.ts.timestamp-1774702910666-ff905aea9f398.mjs
src/hachilles/web/src/: App.tsx  api.ts  index.css  types.ts
tests/: test_integration_all_phases.py  test_integration_phase1_phase2.py  test_phase2_ast.py  test_phase2_llm.py  test_phase2_scanner.py  test_phase2_tracker.py  test_phase3_api.py  test_phase3_plugins.py  test_phase3_typescript.py  test_scanner.py  test_scanner_v2.py
tests/auditors/: contract.py  test_context_auditor.py  test_contract_all.py  test_score_engine.py
tests/fixtures/sample_projects/minimal/: AGENTS.md  feature_list.json
tests/fixtures/sample_projects/minimal/docs/: architecture.md  conventions.md
tests/fixtures/sample_projects/minimal/docs/decisions/: 001-test.md
tests/fixtures/sample_projects/no_harness/: README.md
tests/intensive/: test_type1_property.py  test_type2_boundary.py  test_type3_integration.py  test_type_a_mutation.py  test_type_b_distribution.py  test_type_c_adversarial.py  test_type_d_regression.py  test_type_e_architecture.py  test_type_f_score_engine.py
tests/score/: test_score_engine.py
